fixes-for-subscribed-to-newsletter-alignment

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -134,6 +134,10 @@
                 span {
                     white-space: nowrap;
                 }
+                &:before {
+                    content: '';
+                    margin-left: 0;
+                }
             }
         }
 
